--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </p>
   </section> 
   <section id="duration">
-  <span><a href="daily.html" class="a-current daily-a" >Daily</a></span>
+  <span><a href="index.html" class="a-current daily-a" >Daily</a></span>
   <span><a href="weekly.html" class="a-others weekly-a" >Weekly</a></span>
   <span><a href="monthly.html" class="a-others monthly-a" >Monthly</a></span>
   </section>
