--- a/weekly.html
+++ b/weekly.html
@@ -25,7 +25,7 @@
   </p>
   </section> 
   <section id="duration">
-  <span><a href="daily.html" class="a-others a-current daily-a" >Daily</a></span>
+  <span><a href="index.html" class="a-others a-current daily-a" >Daily</a></span>
   <span><a href="weekly.html" class="a-current weekly-a" >Weekly</a></span>
   <span><a href="monthly.html" class="a-others a-current monthly-a" >Monthly</a></span>
   </section>
